--- a/client/index.html
+++ b/client/index.html
@@ -11,6 +11,7 @@
     />
 </head>
 <body>
+     <h1>Multi-Model OpenAI Aplication</h1>
 <div id="response-list">
 </div>
 <div id="bottom-container">
